# quantum-inspired-task-planner

./: .dockerignore  .editorconfig  .env.example  .env.production  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  AUTONOMOUS_SDLC_COMPLETE_IMPLEMENTATION.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_EXECUTION_SUMMARY.md  AUTONOMOUS_SDLC_IMPLEMENTATION_COMPLETE.md  AUTONOMOUS_SDLC_PRODUCTION_DEPLOYMENT.md  AUTONOMOUS_SDLC_REPORT.md  AUTONOMOUS_VALUE_DISCOVERY.md  CHANGELOG.md  CHECKPOINTED_SDLC_IMPLEMENTATION_SUMMARY.md  CLAUDE_IMPROVEMENTS.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile.production  ENHANCEMENT_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_SDLC_REPORT_1754359064.json  INCIDENT_RESPONSE.md  MATURITY_ASSESSMENT.md  MONITORING_RUNBOOK.md  Makefile  NEURAL_OPERATOR_CRYPTANALYSIS_RESEARCH_PAPER.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_READINESS.md  PRODUCTION_READINESS_REPORT.md  PROJECT_CHARTER.md  README.md  RESEARCH_BREAKTHROUGH_COMPLETE.md  (+116 more)
.devcontainer/: devcontainer.json  post-create.sh
.github/: PULL_REQUEST_TEMPLATE.md  container-structure-test.yaml  dependabot.yml  project-metrics.json
.github/ISSUE_TEMPLATE/: backend_integration.yml  bug_report.md  config.yml  feature_request.md  feature_request.yml  performance_issue.md  performance_issue.yml  quantum_backend_issue.md
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: cicd.yml
.terragon/: backlog.md  config.yaml  latest_scoring_report.json  scoring-model.py  value-metrics.json
benchmarks/: performance_suite.py
claude_improvements_20250830_235025/: context.md
docker/: entrypoint.sh  healthcheck.py
docker/config/: production.yaml
docs/: ADVANCED_IDE_SETUP.md  DEPLOYMENT.md  DEVELOPMENT.md  GITHUB_WORKFLOWS_SETUP.md  IDE_SETUP.md  INCIDENT_RESPONSE.md  MONITORING.md  PERFORMANCE_OPTIMIZATION.md  ROADMAP.md  SDLC_MATURITY_REPORT.md  SETUP_COMPLETE.md  SETUP_REQUIRED.md  WORKFLOW_ACTIVATION_GUIDE.md  WORKFLOW_DEPLOYMENT.md
docs/adr/: 000-adr-template.md  001-quantum-backend-abstraction.md
docs/guides/: DEVELOPER_GUIDE.md  USER_GUIDE.md
docs/runbooks/: README.md  deployment-procedures.md  incident-response.md  maintenance-tasks.md
docs/workflows/: ADVANCED_WORKFLOWS.md  README.md  WORKFLOW_SETUP_GUIDE.md
docs/workflows/examples/: cd-template.yml  ci-template.yml  security-scanning-template.yml
examples/: advanced_research_demo.py  basic_assignment.py  basic_usage.py  framework_integration.py  neural_operator_cryptanalysis_demo.py  problem_example.json  research_algorithms_demo.py  time_window_example.json
k8s/: api-gateway.yaml  backup-cronjob.yaml  deployment.yaml  ingress.yaml  network-policy.yaml  pod-security.yaml  secrets.yaml  ssl-config.yaml
monitoring/: alertmanager.yml  dashboard.json  elk-stack.yml  grafana_dashboard.json  logstash.conf  performance_config.yaml  prometheus.yml  quantum_alerts.yml  quantum_planner_rules.yml
observability/: alerting_rules.yaml  health_check_config.yaml  otel_config.yaml
research/: NEURAL_OPERATOR_CRYPTANALYSIS_LITERATURE_REVIEW.md
research/validation/: CRYPTOGRAPHIC_SECURITY_VALIDATION.md
scripts/: backup.sh  calculate_security_score.py  check_quantum_imports.py  compare_benchmarks.py
scripts/automation/: automation_scheduler.py  dependency_updater.py  metrics_collector.py  repository_health_monitor.py
security/: compliance_config.yaml  quantum_credential_scanner.py  sbom_generator.py
src/quantum_planner/: __init__.py  caching.py  cli.py  concurrent_optimizer.py  concurrent_processing.py  globalization.py  models.py  monitoring.py  optimizer.py  performance.py  planner.py  planner_optimized.py  qubo_builder.py  reliability.py  security.py  validation.py
src/quantum_planner/backends/: __init__.py  azure_backend.py  base.py  classical_backends.py  dwave_backend.py  enhanced_base.py  enhanced_classical.py  enhanced_quantum.py  ibm_backend.py  research_backend.py  simulator_backend.py
src/quantum_planner/globalization/: compliance_manager.py  i18n_manager.py
src/quantum_planner/integrations/: __init__.py  autogen_integration.py  base_integration.py  crewai_integration.py  langchain_integration.py
src/quantum_planner/optimization/: __init__.py  enhanced_performance.py  performance.py  research_integration.py
src/quantum_planner/research/: __init__.py  adaptive_quantum_annealing.py  advanced_neural_cryptanalysis.py  advanced_quantum_algorithms.py  autonomous_quantum_optimization.py  breakthrough_neural_cryptanalysis.py  breakthrough_quantum_optimizer.py  comprehensive_research_benchmarking_suite_2025.py  comprehensive_research_benchmarks.py  cryptanalysis_performance.py  cryptanalysis_reliability.py  cryptanalysis_security.py  enhanced_neural_cryptanalysis.py  enhanced_quantum_advantage_predictor.py  enhanced_qubo_formulation.py  hybrid_decomposition.py  hyperspeed_neural_cryptanalysis.py  neural_operator_cryptanalysis.py  neural_quantum_fusion.py  noise_aware_optimization.py  novel_quantum_algorithms.py  quantum_advantage_benchmarks.py  quantum_advantage_prediction.py  quantum_classical_coevolution.py  quantum_cryptanalysis_integration.py  quantum_ecosystem_intelligence.py  quantum_fusion_optimizer.py  quantum_hyperdimensional_optimizer.py  quantum_pareto_optimization.py  quantum_security_framework.py  (+12 more)
tests/: conftest.py  performance_config.yaml  test_enhanced_research_modules.py
tests/benchmarks/: memory_profile.py  test_performance.py
tests/e2e/: test_workflows.py
tests/fixtures/: data_generators.py  qubo_matrices.py  test_problems.json
tests/integration/: test_end_to_end.py  test_neural_cryptanalysis_integration.py
tests/performance/: test_cryptanalysis_benchmarks.py
tests/property/: test_properties.py
tests/unit/: test_models.py  test_neural_operator_cryptanalysis.py
workflows-ready-to-deploy/: ci.yml  dependabot-auto-merge.yml  performance.yml  release.yml  security.yml
workflows-ready-to-deploy/codeql/: codeql-config.yml
workflows-to-add/: ci.yml
(+1 files in other folders)
